# ai_mri_report_gen

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release-macos.yml
apps/desktop/: main.py
docs/: architecture.md  install.md  roadmap.md
examples/: README.md
scripts/: generate_icon.py  package_pyinstaller.py
src/medreport/: __init__.py
src/medreport/ai/: __init__.py  interfaces.py
src/medreport/app/: main.py  ports.py  services.py
src/medreport/core/: __init__.py  exceptions.py  logging.py
src/medreport/database/: __init__.py  sqlite.py
src/medreport/dicom/: __init__.py  repository.py
src/medreport/image/: __init__.py
src/medreport/models/: __init__.py  dicom.py
src/medreport/plugins/: __init__.py  discovery.py  sdk.py
src/medreport/reports/: ai_report.py  pdf.py  templates.py
src/medreport/segmentation/: __init__.py
src/medreport/settings/: __init__.py  service.py
src/medreport/ui/: ai_config_dialog.py  main_window.py  medgemma_setup_dialog.py  medgemma_setup_worker.py  theme.py  viewer.py  welcome_dialog.py  workers.py
src/medreport/viewer/: __init__.py  windowing.py
tests/unit/: test_ai_config_dialog.py  test_ai_report.py  test_report_pdf.py  test_services.py  test_windowing.py  test_workers.py
